--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,20 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-       
+        <header>
+            <div>
+                <a id="highscore">highscore</a>
+                <p id="time-left"></p>
+            </div>
+        </header>
+        <div class="question-container">
+        </div>
+        <div class="answer-container">
+            <button class="choices" onclick="" id="choice1"></button>
+            <button class="choices" onclick="" id="choice2"></button>
+            <button class="choices" onclick="" id="choice3"></button>
+            <button class="choices" onclick="" id="choice4"></button>
+        </div>
         
         <script src="script.js"></script>
     </body>
