CSS body skeleton

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -10,7 +10,7 @@
     <body>
         <header>
             <div>
-                <a id="highscore">highscore</a>
+                <a id="highscore">View high scores</a>
                 <p id="time-left"></p>
             </div>
         </header>
