Basic css formatting

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,23 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>The Coding Quiz</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <div>
+            <div class="dashboard">
                 <a id="highscore">View high scores</a>
                 <p id="time-left"></p>
             </div>
         </header>
-        <div class="question-container">
-        </div>
-        <div class="answer-container">
-            <button class="choices" onclick="" id="choice1"></button>
-            <button class="choices" onclick="" id="choice2"></button>
-            <button class="choices" onclick="" id="choice3"></button>
-            <button class="choices" onclick="" id="choice4"></button>
-        </div>
+        <div class="content-container">
+            <h1> Coding Quiz Challenge</h1>
+            <h2 id="questions"> Questions</h2>
+            <ul id="answers"></ul>
         
         <script src="script.js"></script>
     </body>
