Adding start button

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>The Coding Quiz</title>
+        <title>Coding Quiz</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -17,6 +17,7 @@
         </header>
         <div class="content-container">
             <h1> Coding Quiz Challenge</h1>
+            <div class="start-button"><Button>Start Quiz</Button></div>
             <h2 id="questions"> Questions</h2>
             <ul id="answers"></ul>
         
