Formatting for questions and answers

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,15 +11,35 @@
     <body>
         <header>
             <div class="dashboard">
-                <a id="highscore">View high scores</a>
-                <p id="time-left"></p>
+                <a id="highscore">View High Scores</a>
+                <div class="timer">
+                    <div class="time-left">Time Left</div>
+                </div>
             </div>
         </header>
-        <div class="content-container">
+        <section>
             <h1> Coding Quiz Challenge</h1>
             <div class="start-button"><Button>Start Quiz</Button></div>
-            <h2 id="questions"> Questions</h2>
-            <ul id="answers"></ul>
+        </section>
+        <section>
+            <div class="qustions">
+                <span>Question 1</span>
+            </div>
+            <div class="answer-list">
+                <div class="answer">
+                    <span>Answer 1</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 2</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 3</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 4</span>
+                </div>
+            </div>
+        </section>
         
         <script src="script.js"></script>
     </body>
