Adding timer function

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -22,7 +22,7 @@
             <div class="start-button"><Button>Start Quiz</Button></div>
         </section>
         <section>
-            <div class="qustions">
+            <div class="question">
                 <span>Question 1</span>
             </div>
             <div class="answer-list">
