Linking questions to start page

--- a/Develop/content.html
+++ b/Develop/content.html
@@ -19,7 +19,23 @@
         </header>
         <section>
             <h1> Coding Quiz Challenge</h1>
-            <a class="start-button" href="content.html"></href><Button>Start Quiz</Button></a>
+            <div class="question">
+                <span>Question 1</span>
+            </div>
+            <div class="answer-list">
+                <div class="answer">
+                    <span>Answer 1</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 2</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 3</span>
+                </div>
+                <div class="answer">
+                    <span>Answer 4</span>
+                </div>
+            </div>
         </section>
         <script src="script.js"></script>
     </body>
