Welcome message and rules to quiz

--- a/Develop/content.html
+++ b/Develop/content.html
@@ -19,21 +19,19 @@
         </header>
         <section>
             <h1> Coding Quiz Challenge</h1>
-            <div class="question">
-                <span>Question 1</span>
-            </div>
+            <div class="question">Insert Question Here</div>
             <div class="answer-list">
                 <div class="answer">
-                    <span>Answer 1</span>
+                    <span>Option 1</span>
                 </div>
                 <div class="answer">
-                    <span>Answer 2</span>
+                    <span>Option 2</span>
                 </div>
                 <div class="answer">
-                    <span>Answer 3</span>
+                    <span>Option 3</span>
                 </div>
                 <div class="answer">
-                    <span>Answer 4</span>
+                    <span>Option 4</span>
                 </div>
             </div>
         </section>
