--- a/Develop/index.html
+++ b/Develop/index.html
@@ -12,13 +12,14 @@
         <header>
             <div class="dashboard">
                 <a id="highscore">View High Scores</a>
-                <div class="timer">
-                    <div class="time-left">Time Left</div>
-                </div>
             </div>
         </header>
         <section>
             <h1> Coding Quiz Challenge</h1>
+            <p>Welcome to the coding quiz challenge.  This quiz will be 5 questions in length.  You will be given 75 seconds to
+                complete this quiz and the goal is to finish as quickly as possible.  If you get an answer to a question wrong
+                the timer will deduct 10 seconds.  Good luck!
+            </p>
             <a class="start-button" href="content.html"></href><Button>Start Quiz</Button></a>
         </section>
         <script src="script.js"></script>
