--- a/Develop/index.html
+++ b/Develop/index.html
@@ -16,7 +16,8 @@
         </header>
         <section>
             <h1> Coding Quiz Challenge</h1>
-            <p>Welcome to the coding quiz challenge.  This quiz will be 5 questions in length.  You will be given 75 seconds to
+            <p>
+                Welcome to the coding quiz challenge.  This quiz will be 5 questions in length.  You will be given 75 seconds to
                 complete this quiz and the goal is to finish as quickly as possible.  If you get an answer to a question wrong
                 the timer will deduct 10 seconds.  Good luck!
             </p>
