Creating answer buttons

--- a/Develop/content.html
+++ b/Develop/content.html
@@ -21,18 +21,18 @@
             <h1> Coding Quiz Challenge</h1>
             <div class="question">Which of the following is a programming language?</div>
             <div class="answer-list">
-                <div class="answer">
+                <button class="answer">
                     <span>Boolean</span>
-                </div>
-                <div class="answer">
+                </button>
+                <button class="answer">
                     <span>Console.log</span>
-                </div>
-                <div class="answer">
+                </button>
+                <button class="answer">
                     <span>Javascript</span>
-                </div>
-                <div class="answer">
+                </button>
+                <button class="answer">
                     <span>Array</span>
-                </div>
+                </button>
             </div>
         </section>
         <script src="script.js"></script>
