--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="dashboard">
-                <a id="highscore">View High Scores</a>
+                <a id="highscore" href="scores.html">View High Scores</a>
             </div>
         </header>
         <section>
