Adding in actual quiz questions

--- a/Develop/content.html
+++ b/Develop/content.html
@@ -25,7 +25,7 @@
                     <span>Boolean</span>
                 </button>
                 <button class="answer">
-                    <span>Console.log</span>
+                    <span>console.log</span>
                 </button>
                 <button class="answer">
                     <span>Javascript</span>
